--- a/styles/finance.css
+++ b/styles/finance.css
@@ -75,6 +75,10 @@ table td.outcome {
   justify-content: center;
 }
 
+.modal-header {
+  color: #191921;
+}
+
 .sr-only {
   position: absolute;
   width: 1px;
